package smarthome.ddd;

public interface DomainID extends ValueObject {

}
