package smarthome.ddd;

public interface ValueObject {

}
